HTML for selecting zone for battle.
- Added html that allows to select zone for battle.
- Need to move css to css file and add functionality to buttons.
- Also there is need to don't battle before selecting zone.

--- a/idle.css
+++ b/idle.css
@@ -128,6 +128,16 @@ button
 	justify-content: center;
 }
 
+#battle_window_battle
+{
+	display: none;
+	flex-wrap: wrap;
+	align-content: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+}
+
 #questing_window
 {
 	display: none;
