--- a/idle.css
+++ b/idle.css
@@ -74,13 +74,29 @@ button
 
 .task_window
 {
-	border: black  1px solid;
+	border-top-color: black;
+	border-top-style: solid;
+	border-top-width: 1px;
+	border-bottom-color: black;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
 	width: 100%;
 	height: 100%;
 }
 
+.player_info_group
+{
+	border-top-color: black;
+	border-top-style: solid;
+	border-top-width: 1px;
+	border-bottom-color: black;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+}
+
 #info_panel
 {
+	border: black 2px solid;
 	float: left;
 	width: 20%;
 	height: calc(90%);
@@ -89,11 +105,21 @@ button
 
 #main_panel
 {
+	border: black 2px solid;
 	display: flex;
 	flex-direction: column;
 	float: left;
 	width: 50%;
 	height: calc(90%);
+}
+
+.vertical_spacer
+{
+	width: 2px;
+	height: calc(90%);
+	display: flex;
+	flex-direction: column;
+	float: left;
 }
 
 #player_battle_data, 
