Rewritten how battle zones are added.
- Now adding new battle zone is as simple as adding new entry in array. HTML will populate itself with correct data. Horray!

--- a/idle.css
+++ b/idle.css
@@ -272,3 +272,10 @@ button
 {
 	overflow-y: auto;
 }
+
+.battle_window_select_zone_element
+{
+	height: 10%; 
+	display: flex; 
+	align-items: center;
+}
