--- a/idle.css
+++ b/idle.css
@@ -17,16 +17,19 @@ body
 div,
 span {
   box-sizing: content-box;
+  text-shadow: 1px 1px 2px #000000;
 }
 
 button
 {
 	background-color: white;
-	font-size: large;
+	font-size: larger;
 	font-family: "League Spartan", sans-serif;
 	font-optical-sizing: auto;
 	font-style: normal;
 	font-weight: 500;
+	padding-top: 5px;
+	text-shadow: 0px 0px 1px #6e6e6e;
 }
 
 .help {
@@ -94,6 +97,10 @@ button
 	border-bottom-style: solid;
 	border-bottom-width: 1px;
 	padding-left: 2px;
+	padding-bottom: 1px;
+	padding-top: 4px;
+	background-color: rgba(25, 100, 150, 0.75);
+	font-size: larger;
 }
 
 #info_panel
@@ -253,19 +260,26 @@ button
 	border:#000 2px solid;
  }
  
- #questing_progress_bar_inside {
+#questing_progress_bar_inside {
 	width: 100%;
 	height: 15px;
 	background-color: rgba(29, 3, 99, 0.85);
 	border-radius: 10px;
- }
+}
+
+.equipment_slot
+{
+	display: flex;
+	height: 10%;
+	border-bottom:#000 solid 1px;
+}
 
 .equipment_slot_info
 {
 	display: flex;
-	border: black  1px solid;
 	justify-content: center;
-	align-items: center; 
+	align-items: center;
+	border-left: black solid 1px;
 }
 
 #select_zone_scrolling_list
