More visual changes.
- Battle window now properly have player and monster nicely separated.
- Exhaustion level now is immediately displayed when first time clicking quesitng window.

--- a/idle.css
+++ b/idle.css
@@ -134,6 +134,14 @@ button
 	float: left;
 }
 
+#battle_data
+{
+	display: none;
+	width: 100%;
+	height: 100%;
+	align-items: center;
+}
+
 #player_battle_data, 
 #monster_battle_data
 {
