Smith - First part of logic
- Buttons for selecting the item to upgrade should work now.
- Added basic numbers for pitty system into the items.

--- a/idle.css
+++ b/idle.css
@@ -370,10 +370,11 @@ button
 .smith_item_select_text
 {
 	display:flex;
-	flex-direction:column;
 	justify-content:center;
 	align-items:center;
 	color:white;
+	height: 70%;
+	width: 100%;
 }
 
 .smith_border_1px
