--- a/dungeon.css
+++ b/dungeon.css
@@ -26,3 +26,24 @@
 	width: 20%;
 	border: #000 solid 1px;
 }
+
+.dungeon_dungeonSelect_Row
+{
+	display: flex;
+	flex-shrink: 0;
+	justify-content: center;
+	align-items: center;
+	height: 35%;
+	width: 100%;
+	border-bottom: #000 solid 1px;
+}
+
+.dungeon_dungeonSelect_location
+{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100%;
+	width: 33%;
+	border: #000 solid 1px;
+}
