--- a/dungeon.css
+++ b/dungeon.css
@@ -32,9 +32,9 @@
 	flex-shrink: 0;
 	justify-content: center;
 	align-items: center;
-	height: 35%;
+	height: 30%;
 	width: 100%;
-	border-bottom: #000 solid 1px;
+	border: #000 solid 1px;
 }
 
 .dungeon_dungeonSelect_location
@@ -44,5 +44,26 @@
 	align-items: center;
 	height: 100%;
 	width: 33%;
+	border: #000 solid 1px;
+}
+
+.dungeonWindow_insideDungeon_enemiesRow
+{
+	display: flex;
+	flex-shrink: 0;
+	justify-content: center;
+	align-items: center;
+	height: 33%;
+	width: 100%;
+	border-bottom: #000 solid 1px;
+}
+
+.dungeonWindow_insideDungeon_enemySquare
+{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100%;
+	width: 20%;
 	border: #000 solid 1px;
 }
