--- a/idle.css
+++ b/idle.css
@@ -45,12 +45,6 @@ button
 	min-height: 760px;
 	width: 100%;
 	height: 100%;
-	margin: 1%;
-	padding: 0px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	overflow: hidden;
 	unicode-bidi: isolate;
 }
 
@@ -118,6 +112,8 @@ button
 {
 	border: black 2px solid;
 	border-radius: 8px;
+	margin-left: 1%;
+	margin-top: 1%;
 	float: left;
 	width: 20%;
 	height: calc(90%);
@@ -128,21 +124,14 @@ button
 {
 	border: black 2px solid;
 	border-radius: 8px;
+	margin-top: 1%;
+	margin-left: 3px;
 	display: flex;
 	flex-direction: column;
 	float: left;
 	width: 50%;
 	height: calc(90%);
 	background-color: #3c3c3c;
-}
-
-.vertical_spacer
-{
-	width: 2px;
-	height: calc(90%);
-	display: flex;
-	flex-direction: column;
-	float: left;
 }
 
 #player_battle_data, 
@@ -417,45 +406,4 @@ button
 	border-color: #000;
 	color: black;
 	text-shadow: 0px 0px 1px #6e6e6e;
-}
-
-.level-up-popup {
-    position: fixed;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-	background: linear-gradient(135deg, #454545, #6b6b6b);
-    color: white;
-    padding: 15px 30px;
-    border-radius: 8px;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.8), 0 0 10px rgba(0, 0, 0, 0.5);
-    z-index: 9999;
-    font-size: 2em;
-    font-weight: bold;
-    text-align: center;
-    border: 2px solid #979797;
-    pointer-events: auto;
-    opacity: 1;
-    transition: opacity 500ms ease-out;
-}
-
-.level-up-popup .close-btn {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    cursor: pointer;
-    font-size: x-large;
-    color: white;
-    background: transparent;
-    border: none;
-    padding: 0;
-    line-height: 1;
-}
-
-.level-up-popup .close-btn:hover {
-    color: #a3a3a3;
-}
-
-.fade-out {
-    opacity: 0;
 }
