--- a/idle.css
+++ b/idle.css
@@ -275,6 +275,24 @@ button
 	border-bottom:#000 solid 1px;
 }
 
+.equipment_slot_content
+{
+	display: flex;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+.equipment_slot_overlay
+{
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	opacity: 0.2;
+	background: radial-gradient(circle,rgba(255, 255, 255, 0) 20%, rgba(252, 70, 107, 0) 100%);
+}
+
 .equipment_slot_info
 {
 	display: flex;
