UI responsiveness - Monster zones
- Clicking "Battle" button on the bottom of the screen during farming monsters will now be the same as clicking "Run away" button.
- Monster zones now unlock with player levels.
- Monster zones now display with it's levels descending rather than ascending as highest levels of dungeons were at the bottom rather than on top.

--- a/idle.css
+++ b/idle.css
@@ -319,7 +319,7 @@ button
 
 .battle_window_select_zone_element
 {
-	height: 5%; 
+	height: 7vh; 
 	display: flex; 
 	align-items: center;
 	border-bottom:#000 solid 1px;
