--- a/idle.css
+++ b/idle.css
@@ -80,7 +80,7 @@ button
 	border-bottom-style: solid;
 	border-bottom-width: 1px;
 	width: 100%;
-	height: 75%;
+	height: 100%;
 }
 
 .player_info_group
@@ -416,6 +416,12 @@ button
 	border-color: #000;
 	color: black;
 	text-shadow: 0px 0px 1px #6e6e6e;
+}
+
+.shop_window_button_back
+{
+	height: 75%;
+	width: 15%;
 }
 
 @keyframes SmithUpgradeFlashSuccess
