--- a/shops/shops.css
+++ b/shops/shops.css
@@ -5,3 +5,59 @@
 	align-items: center;
 	border-bottom:#000 solid 1px;
 }
+
+.shops_shop_selection_half
+{
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	height: 100%;
+	align-items: center; 
+	justify-content: center;
+}
+
+.shops_shop_name
+{
+	font-size: xx-large;
+}
+
+.shops_display
+{
+	display: flex;
+	flex-direction: column;
+	width: 80%;
+	height: 90%;
+	border-left:#000 solid 1px;
+	border-right:#000 solid 1px;
+}
+
+.shops_bottom_control
+{
+	display: flex;
+	width: 100%;
+	height: 10%;
+	align-items: center;
+	justify-content: center;
+	border-top:#000 solid 1px
+}
+
+.shop_window_button_back
+{
+	height: 75%;
+	width: 15%;
+}
+
+.shop_flexing_center
+{
+	display: flex;
+	justify-content: center;
+}
+
+.shop_window_inside
+{
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	height: 100%;
+	align-items: center;
+}
