--- a/idle.css
+++ b/idle.css
@@ -319,7 +319,7 @@ button
 
 .battle_window_select_zone_element
 {
-	height: 7vh; 
+	height: 9%; 
 	display: flex; 
 	align-items: center;
 	border-bottom:#000 solid 1px;
