--- a/idle.css
+++ b/idle.css
@@ -44,7 +44,7 @@ button
 	min-width: 1260px;
 	min-height: 760px;
 	width: 100%;
-	height: 100%;
+	height: 98%;
 	unicode-bidi: isolate;
 }
 
@@ -116,7 +116,7 @@ button
 	margin-top: 1%;
 	float: left;
 	width: 20%;
-	height: calc(90%);
+	height: calc(95%);
 	background-color: #3c3c3c;
 }
 
@@ -130,8 +130,20 @@ button
 	flex-direction: column;
 	float: left;
 	width: 50%;
-	height: calc(90%);
+	height: calc(95%);
 	background-color: #3c3c3c;
+}
+
+#shill_zone
+{
+	display:flex;
+	height: 3%;
+	width: 70.4%;
+	border: black 2px solid;
+	border-radius: 8px;
+	background-color: #303030;
+	margin-left: 1%;
+	align-items: center;
 }
 
 #player_battle_data, 
