Fix for unclickable control buttons
- When screen was not big enough parent div was overlaying left control buttons

--- a/idle.css
+++ b/idle.css
@@ -22,6 +22,7 @@ span {
 
 button
 {
+	pointer-events: auto;
 	background-color: #c3c3c3;
 	font-size: larger;
 	font-family: "League Spartan", sans-serif;
