Visibility of control buttons
- Added borders to control buttons.
- Added functions to highlight buttons when needed.

--- a/idle.css
+++ b/idle.css
@@ -34,6 +34,11 @@ button
 	border-radius: 5px;
 }
 
+.border2pxBlack
+{
+	border: solid 2px black;
+}
+
 .help {
 	cursor: help;
 	text-align: center;
